--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "inferno-compat": "^3.1.1",
     "inferno-component": "^3.1.1",
     "polished": "^1.1.1",
+    "react-move": "^1.1.8",
     "styled-components": "^1.4.6"
   },
   "devDependencies": {
