--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "inferno": "^3.1.1",
     "inferno-compat": "^3.1.1",
     "inferno-component": "^3.1.1",
+    "inferno-redux": "^3.1.1",
     "polished": "^1.1.1",
     "react-move": "^1.1.8",
     "react-sortable-hoc": "^0.6.3",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^1.4.6"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "inferno-devtools": "^3.1.1",
     "inferno-scripts": "3.0.0",
+    "redux-logger": "^3.0.1",
     "standard": "^10.0.2"
   },
   "scripts": {
