--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-sortable-hoc": "^0.6.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.0",
     "styled-components": "^1.4.6"
   },
   "devDependencies": {
