--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "inferno-component": "^3.1.1",
     "inferno-redux": "^3.1.1",
     "polished": "^1.1.1",
+    "react-icons": "^2.2.5",
     "react-move": "^1.1.8",
     "react-sortable-hoc": "^0.6.3",
     "redux": "^3.6.0",
@@ -17,6 +18,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "inferno-devtools": "^3.1.1",
     "inferno-scripts": "3.0.0",
     "redux-logger": "^3.0.1",
