added new eslint rules and logo

--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.1.2",
+    "eslint-plugin-react": "^7.1.0",
     "react-scripts": "1.0.5",
     "redux-logger": "^3.0.1",
     "standard": "^10.0.2"
