--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "Grabient",
   "version": "1.0.0",
   "description": "UI to generate web gradients",
-  "keywords": ["gradients", "react", "redux"],
+  "keywords": [
+    "gradients",
+    "react",
+    "redux"
+  ],
   "repository": "johnkorzhuk/grabient",
   "license": "MIT",
   "private": true,
@@ -25,13 +29,18 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "eslint": "3.19.0",
     "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-prettier": "^2.3.0",
+    "eslint-config-prettier": "2.1.1",
     "eslint-config-react": "^1.1.7",
-    "eslint-plugin-import": "^2.6.1",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.1.2",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-flow": "2.29.1",
+    "eslint-plugin-flowtype": "2.33.0",
+    "eslint-plugin-import": "2.3.0",
+    "eslint-plugin-jsx-a11y": "5.0.3",
+    "eslint-plugin-prettier": "2.1.1",
+    "eslint-plugin-react": "7.0.1",
+    "flow-bin": "^0.51.0",
+    "prettier": "^1.5.3",
     "react-scripts": "1.0.5",
     "redux-logger": "^3.0.1",
     "standard": "^10.0.2"
