--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,12 @@
 {
-  "parser": "babel-eslint",
-  "extends": ["airbnb", "prettier", "prettier/react"],
+  "extends": ["plugin:flowtype/recommended", "airbnb", "prettier", "prettier/react"],
   "rules": {
-    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
-    "arrow-body-style": ["error", "always"]
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }]
   },
-  "plugins": ["prettier"],
+  "plugins": ["flowtype", "prettier"],
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2016,
+    "ecmaVersion": 2017,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
@@ -16,6 +15,7 @@
   "env": {
     "es6": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   }
 }
