--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,13 @@
 {
   "extends": ["plugin:flowtype/recommended", "airbnb", "prettier", "prettier/react"],
   "rules": {
-    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
+    "react/prop-types": 0,
+    "no-shadow": 0,
+    "jsx-a11y/no-autofocus": 0,
+    "consistent-return": 0,
+    "react/no-did-mount-set-state": 0,
+    "no-plusplus": 0
   },
   "plugins": ["flowtype", "prettier"],
   "parser": "babel-eslint",
