--- a/package.json
+++ b/package.json
@@ -19,28 +19,15 @@
     "react-share": "^1.15.0",
     "react-sortable-hoc": "^0.6.3",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
-    "redux-logger": "^3.0.1",
     "styled-components": "^2.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "7.2.3",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-prettier": "2.1.1",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-flow": "2.29.1",
-    "eslint-plugin-flowtype": "2.33.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "5.0.1",
-    "eslint-plugin-prettier": "2.1.1",
-    "eslint-plugin-react": "7.0.1",
-    "flow-bin": "^0.51.0",
-    "prettier": "^1.5.3",
-    "standard": "^10.0.2",
     "autoprefixer": "7.1.0",
     "babel-core": "6.24.1",
+    "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
     "babel-preset-react-app": "^3.0.0",
@@ -49,19 +36,32 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.1",
     "dotenv": "4.0.0",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-prettier": "2.1.1",
+    "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^1.0.3",
-    "eslint-loader": "1.7.1",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-flow": "2.29.1",
+    "eslint-plugin-flowtype": "2.33.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "5.0.1",
+    "eslint-plugin-prettier": "2.1.1",
+    "eslint-plugin-react": "7.0.1",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
+    "flow-bin": "^0.51.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "jest": "20.0.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
+    "prettier": "^1.5.3",
     "promise": "7.1.1",
     "react-dev-utils": "^2.0.0",
     "react-error-overlay": "^1.0.5",
+    "standard": "^10.0.2",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.9.1",
     "url-loader": "0.5.8",
