--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "private": true,
   "dependencies": {
     "deep-equal": "^1.0.1",
+    "firebase": "^4.6.2",
     "lodash": "^4.17.4",
     "next": "^2.4.8",
     "polished": "^1.1.1",
-    "react": "^15.5.4",
+    "react": "^16.1.1",
     "react-color": "^2.11.7",
-    "react-dom": "^15.5.4",
+    "react-dom": "^16.1.1",
     "react-icons": "^2.2.5",
     "react-move": "^1.1.8",
     "react-redux": "^5.0.5",
