--- a/apps/user-application/.vars.example
+++ b/apps/user-application/.vars.example
@@ -39,3 +39,8 @@ R2_BUCKET_NAME=grabient-uploads
 # DEV: Use your R2 public URL (e.g., https://pub-xxxxxxxxx.r2.dev)
 # PROD: Use custom domain if configured (e.g., https://cdn.yourdomain.com)
 R2_PUBLIC_URL=https://pub-xxxxxxxxx.r2.dev
+
+OPENAI_API_KEY=your_openai_key_here
+GOOGLE_GENERATIVE_AI_API_KEY=your_google_key_here
+ANTHROPIC_API_KEY=your_anthropic_key_here
+GROQ_API_KEY=your_groq_key_here
