feat(dx): add Quick Start Mode for zero-config local development
- Make auth optional: getAuth() returns null instead of throwing
- Add graceful auth handling in all 3 middleware functions
- Wrap client auth in try-catch with no-op fallbacks
- Conditionally initialize auth only when BETTER_AUTH_SECRET is set
- Add setup:quick command to package.json
- Create comprehensive QUICK_START.md guide
- Add .dev.vars.example with Quick Start messaging
- Update README with Quick Start section

Quick Start Mode allows new contributors to run Grabient locally
without configuring authentication, OAuth providers, or external
services. Perfect for exploring the codebase and making UI changes.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+journal/
 
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
@@ -71,6 +72,11 @@ web_modules/
 !.env.example
 !apps/user-application/.env
 .dev.vars
+
+# Claude Code local configuration
+.claude/settings.local.json
+.claude/commands/
+.claude/docs/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
