--- a/apps/palette-ops/package.json
+++ b/apps/palette-ops/package.json
@@ -1,102 +1,64 @@
 {
-  "name": "user-application",
+  "name": "palette-ops",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "dev": "vite dev --port 3001",
     "build": "vite build",
     "deploy": "pnpm run build && wrangler deploy",
-    "build:production": "CLOUDFLARE_ENV=production vite build --mode production",
-    "deploy:production": "pnpm run build:production && wrangler deploy",
     "serve": "vite preview",
     "cf-typegen": "wrangler types --env-interface Env",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
-    "@cf-wasm/resvg": "^0.3.2",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/modifiers": "^9.0.0",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@fontsource/poppins": "^5.2.7",
-    "@mantine/hooks": "^8.3.7",
-    "@polar-sh/sdk": "^0.34.17",
-    "@polar-sh/tanstack-start": "^0.1.12",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@ai-sdk/anthropic": "^2.0.53",
+    "@ai-sdk/google": "^2.0.44",
+    "@ai-sdk/groq": "^2.0.32",
+    "@ai-sdk/openai": "^2.0.76",
+    "@anthropic-ai/sdk": "^0.71.1",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@repo/data-ops": "workspace:^",
-    "@sentry/react": "^10.26.0",
-    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.15",
-    "@tanstack/form-core": "^1.26.0",
-    "@tanstack/react-form": "^1.26.0",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-router": "^1.133.22",
     "@tanstack/react-router-devtools": "^1.133.22",
     "@tanstack/react-router-ssr-query": "^1.133.22",
     "@tanstack/react-start": "^1.133.22",
-    "@tanstack/react-store": "^0.8.0",
-    "@tanstack/valibot-form-adapter": "^0.42.1",
-    "aws4fetch": "^1.0.20",
-    "better-auth": "^1.3.29",
-    "browser-image-compression": "^2.0.2",
+    "ai": "^5.0.106",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.5",
-    "fontaine": "^0.7.0",
-    "highlight.js": "^11.11.1",
     "lucide-react": "^0.476.0",
-    "lz-string": "^1.5.0",
-    "posthog-js": "^1.297.2",
+    "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
-    "rehype-highlight": "^7.0.2",
-    "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.1",
-    "resend": "^6.5.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.15",
     "tw-animate-css": "^1.4.0",
     "valibot": "^1.1.0",
-    "vaul": "^1.1.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.12"
+    "workers-ai-provider": "^2.0.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.13.14",
     "@cloudflare/workers-types": "^4.20251202.0",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.18.12",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@types/remark-prism": "^1.3.7",
     "@vitejs/plugin-react": "^4.7.0",
-    "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
-    "rollup-plugin-visualizer": "^6.0.5",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.3",
     "vite": "7.1.2",
-    "vitest": "^3.2.4",
-    "web-vitals": "^4.2.4",
     "wrangler": "^4.44.0"
   }
 }
