feat: add search input and popular keywords to header with scroll-linked animation
- Add expanded search input that starts below header and smoothly moves into header on scroll
- Add popular keywords carousel below subheader
- Search input uses scroll-linked transform for smooth Vercel-style animation
- Keywords filter out currently selected term and link to /palettes/$query
- Add shadcn carousel component for keyword scrolling

--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -57,6 +57,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.5",
+    "embla-carousel-react": "^8.6.0",
     "fontaine": "^0.7.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.476.0",
