feat: add KV caching for OG image generation
- Add OG_IMAGE_CACHE KV namespace for caching generated PNG images
- Check KV cache before generating images, return cached if available
- Store generated images in KV with 7-day TTL
- Add X-Cache header (HIT/MISS) to track cache status

--- a/apps/user-application/wrangler.jsonc
+++ b/apps/user-application/wrangler.jsonc
@@ -62,6 +62,11 @@
 			"binding": "SEARCH_CACHE",
 			"id": "04596938aa91477eb1c38d45f3d1b9f3",
 			"remote": true
+		},
+		{
+			"binding": "OG_IMAGE_CACHE",
+			"id": "a06cc24c512d4994a88593436387f5f1",
+			"remote": true
 		}
 	],
 	// Production environment - used by `wrangler deploy --env production`
