feat: vector search integration and cleanup
- Add vector search with Cloudflare AI embeddings and Vectorize
- Update OG image generation with improved styling and caching
- Add hex color to color name replacement for search queries
- Add tracking events for search functionality
- Remove daily-tags feature and related files
- Update validators and schema for palette metadata

--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "vite dev --port 3000",
     "build": "vite build",
-    "deploy": "pnpm run build && wrangler deploy",
+    "deploy": "pnpm run build && wrangler deploy --env=\"\"",
     "build:production": "CLOUDFLARE_ENV=production vite build --mode production",
-    "deploy:production": "pnpm run build:production && wrangler deploy",
+    "deploy:production": "pnpm run build:production && wrangler deploy --env=production",
     "serve": "vite preview",
     "cf-typegen": "wrangler types --env-interface Env",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
@@ -57,6 +57,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.5",
+    "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "fontaine": "^0.7.0",
     "highlight.js": "^11.11.1",
