--- a/apps/user-application/.env
+++ b/apps/user-application/.env
@@ -2,6 +2,9 @@
 # Variables with VITE_ prefix are exposed to client-side code
 # These are safe to commit as they're public values
 
+# Base URL for OG images and canonical URLs
+VITE_BASE_URL=https://grabient3.jkorzhuk.workers.dev
+
 # Sentry DSN (safe to expose publicly)
 VITE_SENTRY_DSN=https://c729528778730d962b0343db87d28416@o4508445794959360.ingest.us.sentry.io/4509076183449600
 
