WIP: gradient ai gen

--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -39,6 +39,9 @@
     "@sentry/react": "^10.26.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.15",
+    "@tanstack/ai": "^0.0.3",
+    "@tanstack/ai-openai": "^0.0.3",
+    "@tanstack/ai-react": "^0.0.3",
     "@tanstack/form-core": "^1.26.0",
     "@tanstack/react-form": "^1.26.0",
     "@tanstack/react-query": "^5.90.5",
