--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -91,7 +91,7 @@
     "@cloudflare/workers-types": "^4.20251202.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.18.12",
+    "@types/node": "22.18.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/remark-prism": "^1.3.7",
