feat: add palette complexity-based style/steps/angle and session persistence
- Add calculateAverageFrequency and calculateContrast functions to cosine.ts
- Add determinePaletteProperties to assign style/steps/angle based on palette complexity
- Update refine_sessions schema to store palette objects {seed, style, steps, angle}
- Update generate-session.ts to save palette metadata and remove on thumbs down
- Add onBadFeedback callback to remove palettes from UI when disliked
- Update GenerateButton and generate.tsx to handle new palette shape
- Pass style/steps/angle through streaming pipeline to client

--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -14,6 +14,10 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.53",
+    "@ai-sdk/google": "^2.0.44",
+    "@ai-sdk/groq": "^2.0.32",
+    "@ai-sdk/openai": "^2.0.76",
     "@cf-wasm/resvg": "^0.3.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
@@ -21,6 +25,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@fontsource/poppins": "^5.2.7",
     "@mantine/hooks": "^8.3.7",
+    "@openrouter/ai-sdk-provider": "^1.5.4",
     "@polar-sh/sdk": "^0.34.17",
     "@polar-sh/tanstack-start": "^0.1.12",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -40,10 +45,6 @@
     "@sentry/react": "^10.26.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.15",
-    "@tanstack/ai": "^0.0.3",
-    "@tanstack/ai-gemini": "^0.0.3",
-    "@tanstack/ai-openai": "^0.0.3",
-    "@tanstack/ai-react": "^0.0.3",
     "@tanstack/form-core": "^1.26.0",
     "@tanstack/react-form": "^1.26.0",
     "@tanstack/react-query": "^5.90.5",
@@ -54,6 +55,7 @@
     "@tanstack/react-start": "^1.133.22",
     "@tanstack/react-store": "^0.8.0",
     "@tanstack/valibot-form-adapter": "^0.42.1",
+    "ai": "^5.0.106",
     "aws4fetch": "^1.0.20",
     "better-auth": "^1.3.29",
     "browser-image-compression": "^2.0.2",
