--- a/apps/user-application/.vars.example
+++ b/apps/user-application/.vars.example
@@ -44,3 +44,4 @@ OPENAI_API_KEY=your_openai_key_here
 GOOGLE_GENERATIVE_AI_API_KEY=your_google_key_here
 ANTHROPIC_API_KEY=your_anthropic_key_here
 GROQ_API_KEY=your_groq_key_here
+OPENROUTER_API_KEY=your_openrouter_key_here
