feat(dedup): add perceptual color-space deduplication algorithm
- Add LAB color space conversion and deltaE distance calculation
- Compare palettes using normalized color samples (5 points)
- Check both forward and reversed orientations for better matching
- Move deduplication utilities to @repo/data-ops/similarity
- Update refine page to use generated_palettes with new algorithm
- Add getGeneratedPalettesPaginated query for usePaginatedQuery hook

--- a/packages/data-ops/package.json
+++ b/packages/data-ops/package.json
@@ -62,6 +62,10 @@
     "./prompts/*": {
       "types": "./dist/prompts/*.d.ts",
       "default": "./dist/prompts/*.js"
+    },
+    "./similarity": {
+      "types": "./dist/similarity.d.ts",
+      "default": "./dist/similarity.js"
     }
   },
   "scripts": {
