feat(security): add Cloudflare Turnstile to contact form and search
- Add @marsidev/react-turnstile package
- Integrate Turnstile verification on contact form with server-side validation
- Add managed Turnstile widget to search input with flexible sizing
- Create turnstile.ts server function for token verification
- Update contact page layout with viewport height calculation
- Add TURNSTILE_SECRET_KEY to .vars.example

--- a/apps/user-application/.vars.example
+++ b/apps/user-application/.vars.example
@@ -40,6 +40,8 @@ R2_BUCKET_NAME=grabient-uploads
 # PROD: Use custom domain if configured (e.g., https://cdn.yourdomain.com)
 R2_PUBLIC_URL=https://pub-xxxxxxxxx.r2.dev
 
+TURNSTILE_SECRET_KEY=
+
 OPENAI_API_KEY=your_openai_key_here
 GOOGLE_GENERATIVE_AI_API_KEY=your_google_key_here
 ANTHROPIC_API_KEY=your_anthropic_key_here
