--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -25,6 +25,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@fontsource/poppins": "^5.2.7",
     "@mantine/hooks": "^8.3.7",
+    "@marsidev/react-turnstile": "^1.4.0",
     "@openrouter/ai-sdk-provider": "^1.5.4",
     "@polar-sh/sdk": "^0.34.17",
     "@polar-sh/tanstack-start": "^0.1.12",
