chore: remove grabient-ops from tracking and add production bindings
- Add grabient-ops and grabient-ops-local to .gitignore
- Add KV namespaces (SEARCH_CACHE, OG_IMAGE_CACHE) for production
- Add Vectorize and AI bindings for production
- Add VITE_TURNSTILE_SITE_KEY to env

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,7 @@ vite.config.ts.timestamp-*
 packages/data-ops/src/data/prod-*.jsonl
 snapshot.zip
 .seed-production.sql
+
+# Ops apps (not ready for production)
+apps/grabient-ops/
+apps/grabient-ops-local/
