--- a/apps/user-application/.env
+++ b/apps/user-application/.env
@@ -15,3 +15,5 @@ VITE_POSTHOG_API_HOST=https://us.i.posthog.com
 # Google Analytics 4 Measurement ID (safe to expose publicly)
 # Get from: Google Analytics > Admin > Data Streams > Web > Measurement ID
 VITE_GA4_MEASUREMENT_ID=G-9Q353KKFZQ
+
+VITE_TURNSTILE_SITE_KEY=0x4AAAAAABf2mUHr7C-mxWAl
