feat(polar): integrate Polar for subscription payments and usage metering
- Add Polar Better Auth plugin with checkout, portal, usage, and webhooks
- Create pricing page with Free/Pro plans and yearly/monthly toggle
- Add GradientBorderButton with animated gradient border synced to logo
- Implement subscription status checking and AI generation tracking
- Create checkout success page and customer portal redirect
- Add useCustomerState and useCredits hooks for subscription state
- Move Polar config (products, meter) to environment variables
- Update pricing UI to show current plan status for subscribers

--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -27,6 +27,7 @@
     "@mantine/hooks": "^8.3.7",
     "@marsidev/react-turnstile": "^1.4.0",
     "@openrouter/ai-sdk-provider": "^1.5.4",
+    "@polar-sh/better-auth": "^1.6.1",
     "@polar-sh/sdk": "^0.34.17",
     "@polar-sh/tanstack-start": "^0.1.12",
     "@radix-ui/react-avatar": "^1.1.10",
