--- a/apps/user-application/.env
+++ b/apps/user-application/.env
@@ -17,3 +17,4 @@ VITE_POSTHOG_API_HOST=https://us.i.posthog.com
 VITE_GA4_MEASUREMENT_ID=G-9Q353KKFZQ
 
 VITE_TURNSTILE_SITE_KEY=1x00000000000000000000AA
+# VITE_TURNSTILE_SITE_KEY=0x4AAAAAABf2mUHr7C-mxWAl
