--- a/apps/user-application/.vars.example
+++ b/apps/user-application/.vars.example
@@ -47,3 +47,10 @@ GOOGLE_GENERATIVE_AI_API_KEY=your_google_key_here
 ANTHROPIC_API_KEY=your_anthropic_key_here
 GROQ_API_KEY=your_groq_key_here
 OPENROUTER_API_KEY=your_openrouter_key_here
+
+POLAR_ACCESS_TOKEN=
+POLAR_WEBHOOK_SECRET=
+POLAR_SERVER=sandbox
+POLAR_PRODUCT_MONTHLY=
+POLAR_PRODUCT_YEARLY=
+POLAR_METER_AI_GENERATIONS=
