feat(generate): simplify generate flow and add virtualized grid
- Replace auto-generate on navigation with simple link from search to generate
- Rename Generate button to "Create more" on generate route
- Add virtualized grid with skeleton placeholders during generation
- Preserve URL state (style, angle, steps, size, sort) when navigating
- Add client-side sorting for search results on both routes
- Reduce virtualizer overscan for better performance

--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -56,6 +56,7 @@
     "@tanstack/react-router-ssr-query": "^1.133.22",
     "@tanstack/react-start": "^1.133.22",
     "@tanstack/react-store": "^0.8.0",
+    "@tanstack/react-virtual": "^3.13.13",
     "@tanstack/valibot-form-adapter": "^0.42.1",
     "ai": "^5.0.106",
     "aws4fetch": "^1.0.20",
