feat(search): add fuzzy search suggestions for tags, emojis, and colors
- Add fuzzysort library for lightweight fuzzy matching
- Create fuzzy-search utility with hex color detection
- Show fuzzy suggestions inline replacing popular tags when typing
- Add searchQuery to UI store for cross-component state
- Clear search query on route leave via onLeave hooks
- Support emoji keyword search (e.g., "ocean" matches 🌊)
- Add "enter to search" link with KBD styling

--- a/apps/user-application/package.json
+++ b/apps/user-application/package.json
@@ -70,6 +70,7 @@
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "fontaine": "^0.7.0",
+    "fuzzysort": "^3.1.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.476.0",
     "lz-string": "^1.5.0",
