feat: add VITE_ENABLE_PRO feature flag to disable Pro features
Add feature flag system to hide all Grabient Pro features when not ready
for production. When VITE_ENABLE_PRO=false:

- Hide "Upgrade to Pro" and "Grabient Pro" badge in header
- Hide Generate button on search results and generate routes
- Hide Subscription section in settings
- Redirect /pricing, /checkout/success, /app/polar/* routes to home
- Return 503 for payment and subscription tracking endpoints
- Skip Polar API calls entirely (no env vars needed when disabled)

Set VITE_ENABLE_PRO=true in wrangler.jsonc or .env to enable Pro features.

--- a/apps/user-application/wrangler.jsonc
+++ b/apps/user-application/wrangler.jsonc
@@ -21,7 +21,8 @@
 		"R2_PUBLIC_URL": "https://pub-a081a47d10f74a968f0995c41036fbe4.r2.dev",
 		"R2_ACCOUNT_ID": "f846204052f664d57da7acde8f6803cd",
 		"R2_BUCKET_NAME": "grabient-uploads-dev",
-		"VITE_SENTRY_DSN": "https://c729528778730d962b0343db87d28416@o4508445794959360.ingest.us.sentry.io/4509076183449600"
+		"VITE_SENTRY_DSN": "https://c729528778730d962b0343db87d28416@o4508445794959360.ingest.us.sentry.io/4509076183449600",
+		"VITE_ENABLE_PRO": "false"
 	},
 	"r2_buckets": [
 		{
@@ -78,7 +79,8 @@
 				"R2_PUBLIC_URL": "https://cdn.grabient.com",
 				"R2_ACCOUNT_ID": "f846204052f664d57da7acde8f6803cd",
 				"R2_BUCKET_NAME": "grabient-uploads",
-				"VITE_SENTRY_DSN": "https://c729528778730d962b0343db87d28416@o4508445794959360.ingest.us.sentry.io/4509076183449600"
+				"VITE_SENTRY_DSN": "https://c729528778730d962b0343db87d28416@o4508445794959360.ingest.us.sentry.io/4509076183449600",
+				"VITE_ENABLE_PRO": "false"
 			},
 			"r2_buckets": [
 				{
